[package]
name = "bevy_query_ext"
version = "0.6.0-rc.2"
edition = "2024"
authors = ["Testare <testare.i9z@gmail.com>"]
description = "Extensions for Bevy's queries"
repository = "https://github.com/Testare/bevy_query_ext"
license = "MIT"
keywords = ["bevy", "ecs", "game-dev"]

[dependencies]
paste = {version = "1.0.14", optional = true}

[dependencies.bevy]
version = "0.16.0-rc.2"
default-features = false

[features]
all_docs = ["dep:paste"]

[package.metadata.docs.rs]
features = ["all_docs"]
