[package]
name = "bevy_query_ext"
version = "0.7.0-rc"
edition = "2024"
authors = ["Testare <testare.i9z@gmail.com>"]
description = "Extensions for Bevy's queries"
repository = "https://github.com/Testare/bevy_query_ext"
license = "MIT"
keywords = ["bevy", "ecs", "game-dev"]

[dependencies]
paste = {version = "1.0.14", optional = true}

[dependencies.bevy]
version = "0.17.0-rc.1"
default-features = false

[features]
default = ["std"]
std = ["bevy/std"]
libm = ["bevy/libm"]
critical-section = ["bevy/critical-section"]
web = ["bevy/web"]

all_docs = ["dep:paste"]

[package.metadata.docs.rs]
features = ["all_docs"]

[lints.clippy]
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"
